Update fastapi-app example

--- a/docs/code/example_fastapi_app/templates/index.html
+++ b/docs/code/example_fastapi_app/templates/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block title %}
-Example Deta FastAPI App
+Deta FastAPI App Example
 {% endblock %}
 
 {% block content %}
-<h1>Example Deta FastAPI App</h1>
+<h1>Deta FastAPI App Example</h1>
 <p>
   This is an example Deta FastAPI app that demonstrates
   how to create a FastAPI application
